# h03_data_structures-zuukhraa

./: .editorconfig  CMakeLists.txt  README.md  main.cpp
.github/classroom/: autograding.json
.github/workflows/: classroom.yml  cmake_memcheck.yml
include/: array_stack.hpp  linked_dequeue.hpp  linked_queue.hpp  linked_stack.hpp
include/private/: element.hpp  node.hpp  queue.hpp  stack.hpp
io_tests/: CMakeLists.txt  cmd_reader.hpp  deque_io_test.cpp  queue_io_test.cpp  stack_io_test.cpp
io_tests/inputs/: deque.in  queue.in  stack.in
src/: CMakeLists.txt  array_stack.cpp  linked_dequeue.cpp  linked_queue.cpp  linked_stack.cpp
tests/: CMakeLists.txt  array_stack_tests.cpp  linked_dequeue_tests.cpp  linked_queue_tests.cpp  linked_stack_tests.cpp  runner_tests.cpp  utils.hpp
